# bencode-cpp

./: .gitignore  CMakeLists.txt  README.md  bencode.cpp  bencode.h
bencode_test/: .gitignore  CMakeLists.txt  main.cpp
single_include/: bencode.hpp
src/: BEntity.hpp  BObject.cpp  BObject.h  bencode.h  config.h  type.cpp  type.h
